# postino

./: .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  config.example.toml  manage.py  pyproject.toml
apps/analytics/: apps.py  services.py  urls.py  views.py
apps/campaigns/: admin.py  apps.py  forms.py  models.py  sequence_urls.py  services.py  urls.py  views.py
apps/consent/: admin.py  apps.py  email_renderer.py  forms.py  models.py  services.py  tokens.py  urls.py  views.py
apps/core/: apps.py  email_backend.py  locks.py  models.py  plugins.py  urls.py  views.py
apps/subscribers/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/templates_mgr/: admin.py  apps.py  forms.py  models.py  renderer.py  urls.py  views.py
apps/webhooks/: admin.py  apps.py  models.py  services.py  signature.py  urls.py  views.py
cli/: cli.py  config.py  settings.py  urls.py  wsgi.py
manual/: README.md
manual/en/: 01_what_is_postino.md  02_getting_started.md  03_web_dashboard.md  04_subscriber_management.md  05_campaigns_and_newsletters.md  06_automated_sequences.md  07_email_templates.md  08_analytics_and_health.md  (+3 more)
plugins/astrology/: README.md  pyproject.toml
plugins/astrology/postino_astrology/: __init__.py  client.py  plugin.py
plugins/astrology/postino_astrology/management/commands/: generate_weekly_sky.py
templates/: base.html
tests/: settings.py  test_analytics.py  test_campaign_views.py  test_campaigns.py  test_cleanup_retention.py  test_cli_campaigns.py  test_cli_config.py  test_cli_gdpr.py  test_cli_subscribers.py  test_cli_templates.py  test_config.py  test_consent_records.py  test_consent_services.py  test_dashboard.py  test_double_optin.py  test_email_backend.py  test_email_renderer.py  test_email_type.py  test_extended_backends.py  test_gdpr_views.py  test_health_scoring.py  test_preference_center.py  test_scaffolding.py  test_sending_pipeline.py  test_sequences.py  test_smtp_backend.py  test_subscriber_services.py  test_subscriber_views.py  test_subscribers_admin.py  test_subscribers_models.py  test_sync.py  test_template_views.py  test_templates_mgr.py  test_tokens.py  test_unsubscribe_flow.py  test_webhooks.py
(+71 files in other folders)
